test-data/compiletest-rs/ui/const-generics/type-dependent/issue-70586.run.stderr
thread 'main' panicked at 'internal error: entered unreachable code', ui/const-generics/type-dependent/issue-70586.rs:23:9
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
